src/objects/integrator_da__Real_Time_Sync__c.object
<CustomObject>
    <fields>
        <fullName>integrator_da__Batch_Size__c</fullName>
        <inlineHelpText>Batch Size allows records to be exported in batches in case of bulk create/update operation.</inlineHelpText>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>integrator_da__Connection__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Connection</label>
        <referenceTo>integrator_da__Connection__c</referenceTo>
        <relationshipLabel>Real Time Syncs</relationshipLabel>
        <relationshipName>Real_Time_Syncs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>integrator_da__Connector_Id__c</fullName>
        <label>Connector Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>integrator_da__GUID__c</fullName>
        <label>GUID</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>integrator_da__NetSuite_Internal_Id_Field__c</fullName>
        <inlineHelpText>If you would like to store NetSuite Internal Ids inside Salesforce (for subsequent, faster data updates) please tell the sync which field to use by entering that field&apos;s &apos;API Name&apos; here.  Example: NetSuite_Internal_Id__c</inlineHelpText>
        <label>NetSuite Internal Id Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__NetSuite_Sync_Error_Field__c</fullName>
        <inlineHelpText>If you would like to display sync error messages inside Salesforce please tell the sync which field to use by entering that field&apos;s &apos;API Name&apos; here.  Example: NetSuite_Sync_Error__c</inlineHelpText>
        <label>NetSuite Sync Error Field</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__Origin__c</fullName>
        <label>Origin</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__Qualifier__c</fullName>
        <label>Qualifier</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>integrator_da__Real_Time_Data_Flow_Id__c</fullName>
        <inlineHelpText>Each Integrator flow (inside NetSuite) has a unique numeric id.  Please enter that id value here.  This is a mandatory field.</inlineHelpText>
        <label>Real Time Data Flow Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__Referenced_Fields__c</fullName>
        <label>Referenced Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>integrator_da__SObject_Type__c</fullName>
        <inlineHelpText>Please tell the sync which Salesforce object type you would like to export by entering that object&apos;s &apos;API Name&apos; here.  Example: Account</inlineHelpText>
        <label>SObject Type</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__Skip_Export_Field_Id__c</fullName>
        <inlineHelpText>Allows users to specify a checkbox field on the sObject being exported which can be marked on record create/update to skip exporting the record for that operation. The checkbox will auto-uncheck itself without initiating the Realtime export.</inlineHelpText>
        <label>Skip Export Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__User_Defined_Referenced_Fields__c</fullName>
        <label>User Defined Referenced Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>integrator_da__export_when_field_is_set__c</fullName>
        <label>Export when field is set</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__package_version__c</fullName>
        <label>package version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Real Time Sync</label>
    <nameField>
        <displayFormat>RTSYNC-{0}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Real Time Syncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>integrator_da__BatchSize_validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>integrator_da__Batch_Size__c &lt; 4 || integrator_da__Batch_Size__c &gt; 200</errorConditionFormula>
        <errorDisplayField>integrator_da__Batch_Size__c</errorDisplayField>
        <errorMessage>The batch size should be in between 4 and 200</errorMessage>
    </validationRules>
</CustomObject>